// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BubbleChartDescriptor should generate embedding code with height as number 1`] = `
"import React from \\"react\\";
import { idRef, newArithmeticMeasure, newAttribute, newMeasure } from \\"@gooddata/sdk-model\\";
import { BubbleChart } from \\"@gooddata/sdk-ui-charts\\";

const xAxisMeasure = newMeasure(idRef(\\"aangOxLSeztu\\", \\"measure\\"), m => m.alias(\\"Custom Amount alias\\").localId(\\"m_aangOxLSeztu\\"));
const yAxisMeasure = newMeasure(idRef(\\"fact.stagehistory.velocity\\", \\"fact\\"), m => m.alias(\\"Custom Velocity alias\\").localId(\\"m_fact.stagehistory.velocity_sum\\").aggregation(\\"sum\\"));
const size = newArithmeticMeasure([
    \\"m_aangOxLSeztu\\",
    \\"m_fact.stagehistory.velocity_sum\\"
], \\"multiplication\\", m => m.localId(\\"m_c6749e63f72397f69c8d6297c734abd9\\").title(\\"Velocity times Amount\\"));
const viewBy = newAttribute(idRef(\\"label.owner.region\\", \\"displayForm\\"), a => a.alias(\\"Custom Region alias\\").localId(\\"a_label.owner.region\\"));
const style = { height: 1000 };

function MyComponent() {
    return (
        <div style={style}>
            <BubbleChart
                xAxisMeasure={xAxisMeasure}
                yAxisMeasure={yAxisMeasure}
                size={size}
                viewBy={viewBy}
            />
        </div>
    );
}
"
`;

exports[`BubbleChartDescriptor should generate embedding code with height as string 1`] = `
"import React from \\"react\\";
import { idRef, newArithmeticMeasure, newAttribute, newMeasure } from \\"@gooddata/sdk-model\\";
import { BubbleChart } from \\"@gooddata/sdk-ui-charts\\";

const xAxisMeasure = newMeasure(idRef(\\"aangOxLSeztu\\", \\"measure\\"), m => m.alias(\\"Custom Amount alias\\").localId(\\"m_aangOxLSeztu\\"));
const yAxisMeasure = newMeasure(idRef(\\"fact.stagehistory.velocity\\", \\"fact\\"), m => m.alias(\\"Custom Velocity alias\\").localId(\\"m_fact.stagehistory.velocity_sum\\").aggregation(\\"sum\\"));
const size = newArithmeticMeasure([
    \\"m_aangOxLSeztu\\",
    \\"m_fact.stagehistory.velocity_sum\\"
], \\"multiplication\\", m => m.localId(\\"m_c6749e63f72397f69c8d6297c734abd9\\").title(\\"Velocity times Amount\\"));
const viewBy = newAttribute(idRef(\\"label.owner.region\\", \\"displayForm\\"), a => a.alias(\\"Custom Region alias\\").localId(\\"a_label.owner.region\\"));
const style = { height: \\"20rem\\" };

function MyComponent() {
    return (
        <div style={style}>
            <BubbleChart
                xAxisMeasure={xAxisMeasure}
                yAxisMeasure={yAxisMeasure}
                size={size}
                viewBy={viewBy}
            />
        </div>
    );
}
"
`;

exports[`BubbleChartDescriptor should generate embedding code without height 1`] = `
"import React from \\"react\\";
import { idRef, newArithmeticMeasure, newAttribute, newMeasure } from \\"@gooddata/sdk-model\\";
import { BubbleChart } from \\"@gooddata/sdk-ui-charts\\";

const xAxisMeasure = newMeasure(idRef(\\"aangOxLSeztu\\", \\"measure\\"), m => m.alias(\\"Custom Amount alias\\").localId(\\"m_aangOxLSeztu\\"));
const yAxisMeasure = newMeasure(idRef(\\"fact.stagehistory.velocity\\", \\"fact\\"), m => m.alias(\\"Custom Velocity alias\\").localId(\\"m_fact.stagehistory.velocity_sum\\").aggregation(\\"sum\\"));
const size = newArithmeticMeasure([
    \\"m_aangOxLSeztu\\",
    \\"m_fact.stagehistory.velocity_sum\\"
], \\"multiplication\\", m => m.localId(\\"m_c6749e63f72397f69c8d6297c734abd9\\").title(\\"Velocity times Amount\\"));
const viewBy = newAttribute(idRef(\\"label.owner.region\\", \\"displayForm\\"), a => a.alias(\\"Custom Region alias\\").localId(\\"a_label.owner.region\\"));
const style = { height: 400 };

function MyComponent() {
    return (
        <div style={style}>
            <BubbleChart
                xAxisMeasure={xAxisMeasure}
                yAxisMeasure={yAxisMeasure}
                size={size}
                viewBy={viewBy}
            />
        </div>
    );
}
"
`;
